--- a/selfie-timelapse/Info.plist
+++ b/selfie-timelapse/Info.plist
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to capture weather data with your selfies and show them on the map.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to take selfies for your timelapse.</string>
+</dict>
 </plist>
